# Framerate-Backend

./: .env.example  .gitignore  .ignore  Cargo.toml  Dockerfile  README.md  compose.yml  diesel.toml  readme.md
.devcontainer/: .env.example  compose.yml  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
framerate_backend/: Cargo.toml
framerate_backend/src/: lib.rs  main.rs  routes.rs  schema.rs
framerate_backend/tests/: administration.rs  authentication.rs  company.rs  meta.rs  movie.rs  movie_collection.rs  movie_entry.rs  movie_review.rs  movie_watchlist.rs  season.rs  season_review.rs  show_collection.rs  show_review.rs  show_watchlist.rs  user.rs  watchlist.rs
migrations/2024-02-11-055752_user_rating_tables/: down.sql  up.sql
migrations/2024-02-11-055752_user_review_tables/: up.sql
migrations/2024-08-10-061905_user_configuration/: down.sql  up.sql
migrations/2024-09-16-052034_user_unique_email/: down.sql
migrations/2024-10-07-044933_drop_excess_review_columns/: down.sql
migrations/2024-10-12-083325_season_review/: down.sql
migrations/2024-10-13-012132_optional_review_rating/: down.sql  up.sql
migrations/2024-10-20-004248_movie_list_entry/: up.sql
migrations/2024-12-15-070329_user_created_by/: up.sql
migrations/2024-12-23-060706_cascade_company_delete/: down.sql  up.sql
migrations/2024-12-26-033919_movie_entry_status_updated/: down.sql
src/: db.rs  error_handler.rs  jobs.rs  lib.rs  log.rs  main.rs  routes.rs  schema.rs  tmdb.rs
src/authentication/: mod.rs  routes.rs
src/company/: model.rs  routes.rs
src/media/: helpers.rs
src/movie/: model.rs  routes.rs
src/movie_entry/: jobs.rs  mod.rs  model.rs  routes.rs
src/movie_review/: model.rs  routes.rs
src/rating/: model.rs  routes.rs
src/review/: model.rs  routes.rs
src/review_company/: model.rs  routes.rs
src/season/: model.rs  routes.rs
src/season_review/: model.rs  routes.rs
src/show/: model.rs  routes.rs
src/show_entry/: jobs.rs  model.rs  routes.rs
src/show_review/: model.rs  routes.rs
src/show_season/: model.rs  routes.rs
src/user/: model.rs  routes.rs
src/utils/: jwt.rs  mod.rs  response_body.rs  serialization.rs
tests/: auth.rs  authentication.rs  company.rs  movie.rs  movie_entry.rs  movie_review.rs  season_review.rs  show.rs  show_entry.rs  show_review.rs  user.rs  watchlist.rs
tmdb_api/: Cargo.toml
(+214 files in other folders)
