[package]
name = "framerate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = [
    "chrono",
    "postgres_backend",
    "postgres",
    "r2d2",
    "serde_json",
    "uuid",
] }
dotenvy = "0.15"
diesel_migrations = "2.1"
env_logger = "0.11"
listenfd = "1.0"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.7", features = ["serde", "v4"] }
actix-cors = "0.7.0"
reqwest = { version = "0.12.5", features = ["json"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
