[package]
name = "framerate"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = [
    "chrono",
    "postgres_backend",
    "postgres",
    "r2d2",
    "serde_json",
    "uuid",
] }
diesel_migrations = "2.1"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
uuid = { version = "1.7", features = ["serde", "v4"] }
actix-cors = "0.7.0"
reqwest = { version = "0.12.5", features = [
    "json",
    "rustls-tls",
    "http2",
    "charset",
], default-features = false }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
http-cache-reqwest = "0.15.0"
reqwest-middleware = "0.4.0"
futures-util = "0.3.31"
tracing-log = "0.2.0"

[dev-dependencies]
actix-http = "3.9.0"
rand = "0.8.5"
